@@ -43,6 +43,7 @@ Changes in 3.2rc1 :
 - Fix bug with moving files when source and destination are the same, but this is not clear due to symlinks
 - Make sure paste is disabled when editing the name of a torrent
 - Fix bug with wrong byteorder of PEX messages
+- Use KLocale::formatBytes so that KTorrent behaves the same as the rest of KDE when displaying sizes and speeds in bytes
 
 Changes in 3.2beta1 :
 - Ask to create directory in fileselectdlg, if it does not exist (163965)
@@ -114,6 +115,8 @@ Changes in 3.1.6 :
 - Backport file encoding fix
 - Backport fix for 177963 (move files after data check when torrent is complete fix)
 - Backport UPnP port binding fix
+- Backport byteorder bugfix
+
 
 Changes in 3.1.5 :
 - Make sure symlinks work when we create multifile torrents
